--- a/lainnya/404.html
+++ b/lainnya/404.html
@@ -37,7 +37,7 @@
             padding: 0.75rem;
             border-radius: 8px;
             box-shadow: 0 4px 10px rgba(0, 123, 255, 0.3);
-            margin-top: 0.25rem; /* DIUBAH: mt-1 = 0.25rem */
+            margin-top: 1.5rem;
             text-align: center;
             transition: background 0.3s ease;
         }
@@ -72,33 +72,29 @@
             padding: 0.5rem 1rem;
             font-size: 0.9rem;
             cursor: pointer;
-            flex-grow: 1;
-            margin: 0 0.25rem;
+            flex-grow: 1; /* Agar tombol mengisi ruang yang tersedia */
+            margin: 0 0.25rem; /* Memberi sedikit jarak antar tombol */
             transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
             text-align: center;
             font-weight: 600;
         }
         /* Gaya spesifik untuk setiap tombol */
         .btn-iec {
-            background-color: #007bff;
+            background-color: #007bff; /* Biru */
         }
         .btn-icea {
-            background-color: #17a2b8;
+            background-color: #17a2b8; /* Cyan */
         }
         .btn-anzs {
-            background-color: #28a745;
+            background-color: #28a745; /* Hijau */
         }
         .btn-spln {
-            background-color: #ffc107;
-            color: #212529;
+            background-color: #ffc107; /* Kuning */
+            color: #212529; /* Teks hitam agar lebih terlihat */
         }
         .btn-standar:hover {
-            transform: translateY(-2px);
+            transform: translateY(-2px); /* Efek terangkat saat di-hover */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        /* Gaya untuk menempatkan tombol di tengah */
-        .d-flex.justify-content-center .btn {
-            margin: 0 0.5rem;
         }
     </style>
 </head>
@@ -148,7 +144,7 @@
                     <input type="number" step="any" class="form-control" id="spek_max" value="" placeholder="Dalam Ω/km" readonly>
                 </div>
                 
-                <div class="col-12 mt-1">
+                <div class="col-12 mt-2">
                     <div id="hasil-container">
                         <h5 class="mb-2">Hasil Akhir</h5>
                         <h2 id="hasil" class="fw-bold">0.0000 Ω/km</h2>
@@ -162,8 +158,8 @@
                     <button class="btn-standar btn-spln">SPLN</button>
                 </div>
 
-                <div class="col-12 mt-2 d-flex justify-content-center">
-                    <button class="btn btn-danger" onclick="window.history.back()">Kembali</button>
+                <div class="col-12 mt-2 d-flex justify-content-center gap-3">
+                    <button class="btn btn-info" onclick="window.history.back()">Kembali</button>
                     <button class="btn btn-primary" onclick="window.location.href='index.html'">Beranda</button>
                 </div>
 
