--- a/lainnya/404.html
+++ b/lainnya/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kalkulator Hambatan Resistansi</title>
+    <title>Kalkulator Hambatan Resistansi Konduktor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         /* CSS Kustom untuk Tampilan */
@@ -114,7 +114,7 @@
     <div class="container">
         
         <div class="card">
-            <h1 class="text-center mb-2 text-primary">Kalkulator Hambatan Konduktor</h1>
+            <h1 class="text-center mb-2 text-primary">Kalkulator Hambatan Resistansi Konduktor</h1>
             <hr class="mb-4">
 
             <div class="row g-3">
@@ -178,7 +178,7 @@
 
             <hr class="mt-4">
             <div class="col-12">
-                <p class="footer">Dibuat dengan ❤️ & Bootstrap</p>
+                <p class="footer">Williyanto Adi 2025</p>
             </div>
             
         </div>
