--- a/lainnya/404.html
+++ b/lainnya/404.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>YuSup Video Player</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
   <style>
     * {
       box-sizing: border-box;
@@ -42,9 +43,12 @@
       z-index: 10;
     }
 
+    .sidebar-right div {
+      margin-bottom: 15px;
+    }
+
     .sidebar-right i {
       font-size: 24px;
-      margin-bottom: 15px;
       display: block;
     }
 
@@ -67,10 +71,18 @@
       align-items: center;
       height: 60px;
       z-index: 10;
+      border-top: 1px solid #333;
+    }
+
+    .bottom-nav div {
+      text-align: center;
+      font-size: 11px;
     }
 
     .bottom-nav i {
       font-size: 20px;
+      display: block;
+      margin-bottom: 2px;
     }
 
     .profile-pic {
@@ -110,7 +122,6 @@
       cursor: pointer;
     }
   </style>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -129,11 +140,11 @@
 
     <!-- Sidebar kanan -->
     <div class="sidebar-right">
-      <div><i class="fas fa-thumbs-up"></i><div>16 K</div></div>
-      <div><i class="fas fa-thumbs-down"></i><div>Dislike</div></div>
-      <div><i class="fas fa-comment"></i><div>6</div></div>
-      <div><i class="fas fa-share"></i><div>Share</div></div>
-      <div><i class="fas fa-sync-alt"></i><div>17</div></div>
+      <div><i class="fa-solid fa-thumbs-up"></i><div>16 K</div></div>
+      <div><i class="fa-solid fa-thumbs-down"></i><div>Dislike</div></div>
+      <div><i class="fa-solid fa-comment-dots"></i><div>6</div></div>
+      <div><i class="fa-solid fa-share-nodes"></i><div>Share</div></div>
+      <div><i class="fa-solid fa-rotate"></i><div>17</div></div>
     </div>
 
     <!-- Info bawah -->
@@ -153,11 +164,11 @@
 
   <!-- Navigasi bawah -->
   <div class="bottom-nav">
-    <div><i class="fas fa-home"></i><div style="font-size:10px;">Home</div></div>
-    <div><i class="fas fa-play"></i><div style="font-size:10px;">Shorts</div></div>
-    <div><i class="fas fa-plus-circle"></i></div>
-    <div><i class="fas fa-bell"></i><div style="font-size:10px;">Subs</div></div>
-    <div><i class="fas fa-user-circle"></i><div style="font-size:10px;">You</div></div>
+    <div><i class="fa-solid fa-house"></i><div>Home</div></div>
+    <div><i class="fa-solid fa-video"></i><div>Shorts</div></div>
+    <div><i class="fa-solid fa-circle-plus"></i><div></div></div>
+    <div><i class="fa-solid fa-bell"></i><div>Subs</div></div>
+    <div><i class="fa-solid fa-user"></i><div>You</div></div>
   </div>
 
   <script>
@@ -165,7 +176,7 @@
     const videoPlayer = document.getElementById('videoPlayer');
     const videoSource = document.getElementById('videoSource');
 
-    videoInput.addEventListener('change', function() {
+    videoInput.addEventListener('change', function () {
       const file = this.files[0];
       if (file) {
         const url = URL.createObjectURL(file);
