--- a/lainnya/404.html
+++ b/lainnya/404.html
@@ -3,14 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>YuSup Video Player</title>
+  <title>YuSup Multi Video</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     html, body {
       margin: 0;
       padding: 0;
@@ -129,14 +125,11 @@
     <!-- Tombol pilih video -->
     <div class="upload-btn">
       <label for="videoInput" class="custom-upload">Pilih Video</label>
-      <input type="file" id="videoInput" accept="video/*">
+      <input type="file" id="videoInput" accept="video/*" multiple>
     </div>
 
     <!-- Video Player -->
-    <video id="videoPlayer" autoplay muted loop playsinline>
-      <source id="videoSource" src="" type="video/mp4">
-      Browser tidak mendukung video tag.
-    </video>
+    <video id="videoPlayer" autoplay muted controls playsinline></video>
 
     <!-- Sidebar kanan -->
     <div class="sidebar-right">
@@ -174,17 +167,32 @@
   <script>
     const videoInput = document.getElementById('videoInput');
     const videoPlayer = document.getElementById('videoPlayer');
-    const videoSource = document.getElementById('videoSource');
+    let videoFiles = [];
+    let currentIndex = 0;
 
     videoInput.addEventListener('change', function () {
-      const file = this.files[0];
-      if (file) {
-        const url = URL.createObjectURL(file);
-        videoSource.src = url;
-        videoPlayer.load();
-        videoPlayer.play();
+      videoFiles = Array.from(this.files);
+      currentIndex = 0;
+      playVideo(currentIndex);
+    });
+
+    videoPlayer.addEventListener('ended', function () {
+      currentIndex++;
+      if (currentIndex < videoFiles.length) {
+        playVideo(currentIndex);
+      } else {
+        currentIndex = 0;
+        playVideo(currentIndex);
       }
     });
+
+    function playVideo(index) {
+      const file = videoFiles[index];
+      const url = URL.createObjectURL(file);
+      videoPlayer.src = url;
+      videoPlayer.load();
+      videoPlayer.play();
+    }
   </script>
 </body>
 </html>
