--- a/lainnya/404.html
+++ b/lainnya/404.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>YuSup Multi Video</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Scroll Video Shorts</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-      width: 100%;
-      background-color: black;
       overflow: hidden;
+      background: black;
     }
 
-    .video-container {
-      position: relative;
+    .scroll-container {
       height: 100vh;
-      width: 100vw;
+      width: 100%;
+      overflow-y: scroll;
+      scroll-snap-type: y mandatory;
+    }
+
+    .video-section {
+      height: 100vh;
+      width: 100%;
+      position: relative;
+      scroll-snap-align: start;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       background-color: black;
     }
 
@@ -27,16 +38,18 @@
       height: 100%;
       width: 100%;
       object-fit: cover;
-      background: black;
+    }
+
+    .sidebar-right, .bottom-info, .bottom-nav {
+      position: absolute;
+      z-index: 10;
+      color: white;
     }
 
     .sidebar-right {
-      position: absolute;
       right: 10px;
       top: 30%;
       text-align: center;
-      color: white;
-      z-index: 10;
     }
 
     .sidebar-right div {
@@ -49,24 +62,38 @@
     }
 
     .bottom-info {
-      position: absolute;
       bottom: 70px;
       left: 10px;
-      color: white;
-      z-index: 10;
+      display: flex;
+      align-items: center;
+    }
+
+    .bottom-info img {
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-right: 10px;
+    }
+
+    .subscribe-btn {
+      background: white;
+      color: black;
+      padding: 3px 12px;
+      border-radius: 20px;
+      font-size: 14px;
+      font-weight: bold;
+      margin-left: 10px;
     }
 
     .bottom-nav {
-      position: fixed;
       bottom: 0;
       width: 100%;
       background: black;
-      color: white;
       display: flex;
       justify-content: space-around;
       align-items: center;
       height: 60px;
-      z-index: 10;
       border-top: 1px solid #333;
     }
 
@@ -81,24 +108,8 @@
       margin-bottom: 2px;
     }
 
-    .profile-pic {
-      width: 36px;
-      height: 36px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
-
-    .subscribe-btn {
-      background: white;
-      color: black;
-      padding: 3px 12px;
-      border-radius: 20px;
-      font-size: 14px;
-      font-weight: bold;
-    }
-
     .upload-btn {
-      position: absolute;
+      position: fixed;
       top: 10px;
       left: 10px;
       z-index: 20;
@@ -117,138 +128,95 @@
       font-size: 14px;
       cursor: pointer;
     }
-
-    .center-play-btn {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 60px;
-      color: white;
-      background-color: rgba(0, 0, 0, 0.4);
-      border-radius: 50%;
-      padding: 20px;
-      z-index: 15;
-      display: none;
-      cursor: pointer;
-    }
-
-    .center-play-btn.show {
-      display: block;
-    }
   </style>
 </head>
 <body>
 
-  <div class="video-container">
-    <!-- Tombol pilih video -->
-    <div class="upload-btn">
-      <label for="videoInput" class="custom-upload">Pilih Video</label>
-      <input type="file" id="videoInput" accept="video/*" multiple>
-    </div>
-
-    <!-- Tombol play/pause tengah -->
-    <div id="centerPlayBtn" class="center-play-btn">
-      <i class="fas fa-pause"></i>
-    </div>
-
-    <!-- Video Player -->
-    <video id="videoPlayer" autoplay playsinline></video>
-
-    <!-- Sidebar kanan -->
-    <div class="sidebar-right">
-      <div><i class="fa-solid fa-thumbs-up"></i><div>16 K</div></div>
-      <div><i class="fa-solid fa-thumbs-down"></i><div>Dislike</div></div>
-      <div><i class="fa-solid fa-comment-dots"></i><div>6</div></div>
-      <div><i class="fa-solid fa-share-nodes"></i><div>Share</div></div>
-      <div><i class="fa-solid fa-rotate"></i><div>17</div></div>
-    </div>
-
-    <!-- Info bawah -->
-    <div class="bottom-info d-flex align-items-center">
-      <img src="https://via.placeholder.com/36" class="profile-pic me-2" alt="User"/>
-      <div>
-        <div class="d-flex align-items-center">
-          <span>@aqsa1610</span>
-          <button class="ms-2 subscribe-btn">Subscribe</button>
-        </div>
-        <div class="mt-1">
-          <span class="text-warning">#YuSup</span> Cot untuk aqsakuuh
-        </div>
-      </div>
-    </div>
+  <div class="upload-btn">
+    <label for="videoInput" class="custom-upload">Pilih Video</label>
+    <input type="file" id="videoInput" accept="video/*" multiple>
   </div>
 
-  <!-- Navigasi bawah -->
+  <div class="scroll-container" id="scrollContainer">
+    <!-- Video sections will be added dynamically -->
+  </div>
+
   <div class="bottom-nav">
     <div><i class="fa-solid fa-house"></i><div>Home</div></div>
     <div><i class="fa-solid fa-video"></i><div>Shorts</div></div>
-    <div><i class="fa-solid fa-circle-plus"></i><div></div></div>
+    <div><i class="fa-solid fa-circle-plus"></i></div>
     <div><i class="fa-solid fa-bell"></i><div>Subs</div></div>
     <div><i class="fa-solid fa-user"></i><div>You</div></div>
   </div>
 
   <script>
     const videoInput = document.getElementById('videoInput');
-    const videoPlayer = document.getElementById('videoPlayer');
-    const playBtn = document.getElementById('centerPlayBtn');
-    const playIcon = playBtn.querySelector('i');
+    const scrollContainer = document.getElementById('scrollContainer');
 
-    let videoFiles = [];
-    let currentIndex = 0;
-
-    // Pilih banyak video
     videoInput.addEventListener('change', function () {
-      videoFiles = Array.from(this.files);
-      currentIndex = 0;
-      playVideo(currentIndex);
+      const files = Array.from(this.files);
+      scrollContainer.innerHTML = ''; // bersihkan sebelumnya
+
+      files.forEach((file, index) => {
+        const url = URL.createObjectURL(file);
+
+        const section = document.createElement('section');
+        section.className = 'video-section';
+
+        section.innerHTML = `
+          <video src="${url}" playsinline></video>
+
+          <div class="sidebar-right">
+            <div><i class="fa-solid fa-thumbs-up"></i><div>16 K</div></div>
+            <div><i class="fa-solid fa-thumbs-down"></i><div>Dislike</div></div>
+            <div><i class="fa-solid fa-comment-dots"></i><div>6</div></div>
+            <div><i class="fa-solid fa-share-nodes"></i><div>Share</div></div>
+            <div><i class="fa-solid fa-rotate"></i><div>17</div></div>
+          </div>
+
+          <div class="bottom-info">
+            <img src="https://via.placeholder.com/36" alt="User"/>
+            <div>
+              <div class="d-flex align-items-center">
+                <span>@aqsa1610</span>
+                <button class="subscribe-btn">Subscribe</button>
+              </div>
+              <div class="mt-1">
+                <span class="text-warning">#YuSup</span> Video ke-${index + 1}
+              </div>
+            </div>
+          </div>
+        `;
+
+        scrollContainer.appendChild(section);
+      });
+
+      setupAutoPlay();
     });
 
-    // Lanjut ke video berikutnya saat selesai
-    videoPlayer.addEventListener('ended', function () {
-      currentIndex++;
-      if (currentIndex < videoFiles.length) {
-        playVideo(currentIndex);
-      } else {
-        currentIndex = 0;
-        playVideo(currentIndex);
-      }
-    });
+    function setupAutoPlay() {
+      const options = {
+        root: document.querySelector('#scrollContainer'),
+        rootMargin: '0px',
+        threshold: 0.9
+      };
 
-    // Play/pause toggle
-    function togglePlayPause() {
-      if (videoPlayer.paused) {
-        videoPlayer.play();
-        playIcon.className = 'fas fa-pause';
-      } else {
-        videoPlayer.pause();
-        playIcon.className = 'fas fa-play';
-      }
-    }
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          const video = entry.target.querySelector('video');
+          if (entry.isIntersecting) {
+            video.play();
+          } else {
+            video.pause();
+          }
+        });
+      }, options);
 
-    // Tampilkan tombol saat disentuh
-    videoPlayer.addEventListener('click', () => {
-      playBtn.classList.add('show');
-      togglePlayPause();
-      setTimeout(() => {
-        playBtn.classList.remove('show');
-      }, 1000);
-    });
-
-    // Bisa juga klik ikon langsung
-    playBtn.addEventListener('click', () => {
-      togglePlayPause();
-    });
-
-    // Fungsi untuk mainkan video
-    function playVideo(index) {
-      const file = videoFiles[index];
-      const url = URL.createObjectURL(file);
-      videoPlayer.src = url;
-      videoPlayer.load();
-      videoPlayer.play();
-      playIcon.className = 'fas fa-pause';
+      document.querySelectorAll('.video-section').forEach(section => {
+        observer.observe(section);
+      });
     }
   </script>
+
 </body>
 </html>
