--- a/lainnya/404.html
+++ b/lainnya/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aplikasi Video Player Mobile</title>
+  <title>Random Scroll Video Player</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
@@ -137,6 +137,18 @@
       margin-bottom: 2px;
     }
 
+    .choose-button {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      z-index: 30;
+      background: rgba(255, 255, 255, 0.8);
+      padding: 6px 12px;
+      border-radius: 8px;
+      border: none;
+      font-weight: bold;
+    }
+
     @media (max-width: 400px) {
       .subscribe-btn {
         font-size: 11px;
@@ -156,6 +168,7 @@
 </head>
 <body>
   <input type="file" id="videoInput" multiple accept="video/*" hidden />
+  <button class="choose-button" onclick="document.getElementById('videoInput').click()">Pilih Video</button>
   <main id="videoContainer"></main>
 
   <nav class="bottom-navbar">
@@ -168,24 +181,23 @@
   <script>
     const input = document.getElementById('videoInput');
     const container = document.getElementById('videoContainer');
-
-    window.onload = () => {
-      input.click();
-    };
+    let videoURLs = [];
 
     input.addEventListener('change', (e) => {
       const files = Array.from(e.target.files);
+      videoURLs = files.map(file => URL.createObjectURL(file));
+      loadAllVideos(videoURLs);
+    });
+
+    function loadAllVideos(urls) {
       container.innerHTML = '';
-
-      files.forEach((file, index) => {
-        const url = URL.createObjectURL(file);
+      urls.forEach((url, index) => {
         const section = document.createElement('section');
-
         section.innerHTML = `
-          <video src="${url}" playsinline preload="metadata"></video>
+          <video src="${url}" autoplay muted playsinline></video>
 
           <div class="controls">
-            <button class="playpause"><i class="fa-solid fa-play"></i></button>
+            <button class="playpause"><i class="fa-solid fa-pause"></i></button>
           </div>
 
           <div class="sidebar-right">
@@ -204,18 +216,15 @@
                 <button class="subscribe-btn">Subscribe</button>
               </div>
               <div class="mt-1">
-                <span class="text-warning">#YuSup</span> Video ke-${index + 1}
+                <span class="text-warning">#YuSup</span> Random Video
               </div>
             </div>
           </div>
         `;
-
         container.appendChild(section);
 
-        // auto play and pause based on scroll
         const video = section.querySelector("video");
         const btn = section.querySelector(".playpause i");
-
         section.querySelector(".playpause").onclick = () => {
           if (video.paused) {
             video.play();
@@ -227,32 +236,15 @@
             btn.classList.add("fa-play");
           }
         };
-      });
 
-      // Auto play/pause on scroll
-      const sections = container.querySelectorAll("section");
-
-      const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-          const video = entry.target.querySelector("video");
-          const icon = entry.target.querySelector(".playpause i");
-
-          if (entry.isIntersecting) {
-            video.play();
-            icon.classList.remove("fa-play");
-            icon.classList.add("fa-pause");
-          } else {
-            video.pause();
-            icon.classList.remove("fa-pause");
-            icon.classList.add("fa-play");
-          }
+        video.addEventListener("ended", () => {
+          const randomIndex = Math.floor(Math.random() * urls.length);
+          const nextVideo = container.children[randomIndex].querySelector("video");
+          nextVideo.play();
+          nextVideo.scrollIntoView({ behavior: 'smooth' });
         });
-      }, {
-        threshold: 0.6
       });
-
-      sections.forEach(section => observer.observe(section));
-    });
+    }
   </script>
 </body>
 </html>
