--- a/lainnya/404.html
+++ b/lainnya/404.html
@@ -3,34 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Random Scroll Video Player</title>
+  <title>Video Player Loop Acak</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
     body, html {
       margin: 0;
       padding: 0;
-      overflow-x: hidden;
       background: black;
+      overflow: hidden;
     }
 
-    main {
-      height: 100vh;
-      overflow-y: scroll;
-      scroll-snap-type: y mandatory;
-    }
-
-    section {
+    #videoContainer {
       height: 100vh;
       width: 100vw;
       position: relative;
-      scroll-snap-align: start;
     }
 
     video {
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+
+    .upload-btn {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      z-index: 30;
+    }
+
+    input[type="file"] {
+      display: none;
+    }
+
+    .custom-upload {
+      background: white;
+      color: black;
+      padding: 6px 12px;
+      border-radius: 20px;
+      font-weight: bold;
+      font-size: 14px;
+      cursor: pointer;
     }
 
     .sidebar-right {
@@ -40,7 +54,7 @@
       display: flex;
       flex-direction: column;
       gap: 12px;
-      z-index: 5;
+      z-index: 20;
       color: white;
       font-size: 18px;
       text-align: center;
@@ -55,7 +69,7 @@
       bottom: 70px;
       left: 10px;
       right: 10px;
-      z-index: 10;
+      z-index: 20;
       display: flex;
       align-items: center;
       flex-wrap: wrap;
@@ -100,7 +114,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      z-index: 15;
+      z-index: 25;
     }
 
     .controls button {
@@ -122,7 +136,7 @@
       display: flex;
       justify-content: space-around;
       padding: 6px 0;
-      z-index: 20;
+      z-index: 30;
     }
 
     .bottom-navbar .nav-item {
@@ -135,18 +149,6 @@
       display: block;
       font-size: 18px;
       margin-bottom: 2px;
-    }
-
-    .choose-button {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      z-index: 30;
-      background: rgba(255, 255, 255, 0.8);
-      padding: 6px 12px;
-      border-radius: 8px;
-      border: none;
-      font-weight: bold;
     }
 
     @media (max-width: 400px) {
@@ -167,10 +169,16 @@
   </style>
 </head>
 <body>
-  <input type="file" id="videoInput" multiple accept="video/*" hidden />
-  <button class="choose-button" onclick="document.getElementById('videoInput').click()">Pilih Video</button>
-  <main id="videoContainer"></main>
+  <!-- Tombol pilih video -->
+  <div class="upload-btn">
+    <label for="videoInput" class="custom-upload">Pilih Video</label>
+    <input type="file" id="videoInput" multiple accept="video/*" />
+  </div>
 
+  <!-- Kontainer video -->
+  <div id="videoContainer"></div>
+
+  <!-- Navbar bawah -->
   <nav class="bottom-navbar">
     <div class="nav-item"><i class="fa-solid fa-house"></i>Home</div>
     <div class="nav-item"><i class="fa-solid fa-bolt"></i>Shorts</div>
@@ -186,63 +194,66 @@
     input.addEventListener('change', (e) => {
       const files = Array.from(e.target.files);
       videoURLs = files.map(file => URL.createObjectURL(file));
-      loadAllVideos(videoURLs);
+      loadRandomVideo();
     });
 
-    function loadAllVideos(urls) {
+    function loadRandomVideo() {
+      if (videoURLs.length === 0) return;
+
+      const randomIndex = Math.floor(Math.random() * videoURLs.length);
+      const url = videoURLs[randomIndex];
       container.innerHTML = '';
-      urls.forEach((url, index) => {
-        const section = document.createElement('section');
-        section.innerHTML = `
-          <video src="${url}" autoplay muted playsinline></video>
 
-          <div class="controls">
-            <button class="playpause"><i class="fa-solid fa-pause"></i></button>
-          </div>
+      const wrapper = document.createElement('div');
+      wrapper.innerHTML = `
+        <video src="${url}" autoplay playsinline controls></video>
 
-          <div class="sidebar-right">
-            <div><i class="fa-solid fa-thumbs-up"></i><div>16 K</div></div>
-            <div><i class="fa-solid fa-thumbs-down"></i><div>Dislike</div></div>
-            <div><i class="fa-solid fa-comment-dots"></i><div>6</div></div>
-            <div><i class="fa-solid fa-share-nodes"></i><div>Share</div></div>
-            <div><i class="fa-solid fa-rotate"></i><div>17</div></div>
-          </div>
+        <div class="controls">
+          <button class="playpause"><i class="fa-solid fa-pause"></i></button>
+        </div>
 
-          <div class="bottom-info">
-            <img src="https://via.placeholder.com/36" alt="User"/>
-            <div class="info-text">
-              <div>
-                <span>@aqsa1610</span>
-                <button class="subscribe-btn">Subscribe</button>
-              </div>
-              <div class="mt-1">
-                <span class="text-warning">#YuSup</span> Random Video
-              </div>
+        <div class="sidebar-right">
+          <div><i class="fa-solid fa-thumbs-up"></i><div>16 K</div></div>
+          <div><i class="fa-solid fa-thumbs-down"></i><div>Dislike</div></div>
+          <div><i class="fa-solid fa-comment-dots"></i><div>6</div></div>
+          <div><i class="fa-solid fa-share-nodes"></i><div>Share</div></div>
+          <div><i class="fa-solid fa-rotate"></i><div>17</div></div>
+        </div>
+
+        <div class="bottom-info">
+          <img src="https://via.placeholder.com/36" alt="User"/>
+          <div class="info-text">
+            <div>
+              <span>@aqsa1610</span>
+              <button class="subscribe-btn">Subscribe</button>
+            </div>
+            <div class="mt-1">
+              <span class="text-warning">#YuSup</span> Video Random
             </div>
           </div>
-        `;
-        container.appendChild(section);
+        </div>
+      `;
 
-        const video = section.querySelector("video");
-        const btn = section.querySelector(".playpause i");
-        section.querySelector(".playpause").onclick = () => {
-          if (video.paused) {
-            video.play();
-            btn.classList.remove("fa-play");
-            btn.classList.add("fa-pause");
-          } else {
-            video.pause();
-            btn.classList.remove("fa-pause");
-            btn.classList.add("fa-play");
-          }
-        };
+      container.appendChild(wrapper);
 
-        video.addEventListener("ended", () => {
-          const randomIndex = Math.floor(Math.random() * urls.length);
-          const nextVideo = container.children[randomIndex].querySelector("video");
-          nextVideo.play();
-          nextVideo.scrollIntoView({ behavior: 'smooth' });
-        });
+      const video = wrapper.querySelector("video");
+      const btnIcon = wrapper.querySelector(".playpause i");
+      const playPauseBtn = wrapper.querySelector(".playpause");
+
+      // tombol play/pause
+      playPauseBtn.addEventListener('click', () => {
+        if (video.paused) {
+          video.play();
+          btnIcon.className = "fa-solid fa-pause";
+        } else {
+          video.pause();
+          btnIcon.className = "fa-solid fa-play";
+        }
+      });
+
+      // auto loop acak saat selesai
+      video.addEventListener("ended", () => {
+        setTimeout(loadRandomVideo, 1000);
       });
     }
   </script>
